@@ -1,5 +1,11 @@
 2009-11-03  Ian Lance Taylor  <iant@google.com>
 
+	PR 10893
+	* defstd.cc (in_section): Add entries for __rel_iplt_start,
+	__rel_iplt_end, __rela_iplt_start, __rela_iplt_end, and __stack.
+
+2009-11-03  Ian Lance Taylor  <iant@google.com>
+
 	PR 10895
 	* po/Make-in ($(srcdir)/$(PACKAGE).pot): Pass -C and
 	--msgid-bugs-address.
